--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 <main>
     <header>
-        <h1>Titulo do site</h1>
+        <h1>Cursos Grátis</h1>
     </header>
     <article>
-        <h2>Artigo 001</h2>
-        <p>Texto do Artigo 001</p>
+        <h2>Curso de HTML5 e CSS3</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi deserunt illum reprehenderit officia ducimus, molestiae consectetur, enim explicabo molestias inventore adipisci dolor accusantium a dicta fuga doloremque doloribus eum voluptate.</p>
     </article>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Texto do Artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugiat officia, voluptate delectus eaque necessitatibus reiciendis commodi sit ea pariatur molestias molestiae amet, corporis nihil porro voluptatem, ut qui in.</p>
     </article>
 </main>
 
