--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </article>
     <article>
         <h2>Curso de JavaScript</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugiat officia, voluptate delectus eaque necessitatibus reiciendis commodi sit ea pariatur molestias molestiae amet, corporis nihil porro voluptatem, ut qui in.</p>
+        <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
     </article>
 </main>
 
