--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </header>
     <article>
         <h2>Curso de HTML5 e CSS3</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi deserunt illum reprehenderit officia ducimus, molestiae consectetur, enim explicabo molestias inventore adipisci dolor accusantium a dicta fuga doloremque doloribus eum voluptate.</p>
+        <p>A <abbr title="Hyper Text Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
     </article>
     <article>
         <h2>Curso de JavaScript</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugiat officia, voluptate delectus eaque necessitatibus reiciendis commodi sit ea pariatur molestias molestiae amet, corporis nihil porro voluptatem, ut qui in.</p>
+        <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Mode">DOM</abbr>.</p>
     </article>
 </main>
 
