--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 <main>
     <header>
         <h1>Cursos Grátis</h1>
+        <img id="logo" src="imagens/curso-em-video-cor.png" alt="">
     </header>
     <article>
         <h2>Curso de HTML5 e CSS3</h2>
         <p>A <abbr title="Hyper Text Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+        <a href="https://youtu.be/riSVzwlSnhw" target="_blank" rel="external">Acesse o curso de HTML5</a>
+        <img src="imagens/curso-html-css.png" alt="imagens curso html-css">
     </article>
     <article>
         <h2>Curso de JavaScript</h2>
         <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Mode">DOM</abbr>.</p>
+        <a href="https://youtu.be/BXqUH86F-kA" target="_blank" rel="external">Acesse o curso de JavaScript</a>
+        <img src="imagens/curso-javascript.png" alt="imagens curso javascript">
     </article>
 </main>
 
